*** empty log message ***

--- a/coders/Makefile.am
+++ b/coders/Makefile.am
@@ -42,8 +42,8 @@ MAGICK_CODER_SRCS = \
   art.c avi.c avs.c bmp.c caption.c clipboard.c cmyk.c cut.c dcm.c \
   dib.c dps.c dpx.c emf.c ept.c fax.c fits.c fpx.c gif.c gradient.c \
   gray.c hdf.c histogram.c html.c icon.c jbig.c jp2.c jpeg.c label.c \
-  logo.c map.c mat.c matte.c meta.c mgk.c miff.c mono.c mpc.c mpeg.c mpr.c \
-  msl.c mtv.c mvg.c null.c otb.c palm.c pcd.c pcl.c pcx.c pdb.c pdf.c \
+  locale.c logo.c map.c mat.c matte.c meta.c miff.c mono.c mpc.c mpeg.c \
+	mpr.c msl.c mtv.c mvg.c null.c otb.c palm.c pcd.c pcl.c pcx.c pdb.c pdf.c \
   pict.c pix.c plasma.c png.c pnm.c preview.c ps.c ps2.c ps3.c psd.c \
   pwp.c rgb.c rla.c rle.c sct.c sfw.c sgi.c stegano.c sun.c svg.c \
   tga.c tiff.c tile.c tim.c ttf.c txt.c uil.c url.c uyvy.c vicar.c \
@@ -84,8 +84,8 @@ pkgdata_DATA =
 pkg_LTLIBRARIES = \
   art.la avi.la avs.la bmp.la caption.la cmyk.la cut.la dcm.la dib.la dps.la \
   dpx.la ept.la fax.la fits.la fpx.la gif.la gradient.la gray.la hdf.la \
-  histogram.la html.la icon.la jbig.la jp2.la jpeg.la label.la logo.la \
-  map.la mat.la matte.la meta.la mgk.la miff.la mono.la mpc.la mpeg.la mpr.la \
+  histogram.la html.la icon.la jbig.la jp2.la jpeg.la label.la locale.la \
+	logo.la map.la mat.la matte.la meta.la miff.la mono.la mpc.la mpeg.la mpr.la \
 	msl.la mtv.la mvg.la null.la otb.la palm.la pcd.la pcl.la pcx.la pdb.la \
 	pdf.la pict.la pix.la plasma.la png.la pnm.la preview.la ps.la ps2.la ps3.la \
 	psd.la pwp.la rgb.la rla.la rle.la sct.la sfw.la sgi.la stegano.la sun.la \
@@ -241,6 +241,11 @@ label_la_SOURCES    = label.c
 label_la_LDFLAGS    = $(MODULECOMMONFLAGS)
 label_la_LIBADD     = $(LIBMAGICK)
 
+# LOCALE module
+locale_la_SOURCES     = locale.c
+locale_la_LDFLAGS     = $(MODULECOMMONFLAGS)
+locale_la_LIBADD      = $(LIBMAGICK)
+
 # LOGO module
 logo_la_SOURCES     = logo.c
 logo_la_LDFLAGS     = $(MODULECOMMONFLAGS)
@@ -265,11 +270,6 @@ matte_la_LIBADD     = $(LIBMAGICK)
 meta_la_SOURCES     = meta.c
 meta_la_LDFLAGS     = $(MODULECOMMONFLAGS)
 meta_la_LIBADD      = $(LIBMAGICK)
-
-# MGK module
-mgk_la_SOURCES     = mgk.c
-mgk_la_LDFLAGS     = $(MODULECOMMONFLAGS)
-mgk_la_LIBADD      = $(LIBMAGICK)
 
 # MIFF module
 miff_la_SOURCES     = miff.c
