*** empty log message ***

--- a/magick/Makefile.in
+++ b/magick/Makefile.in
@@ -259,13 +259,13 @@ libMagick_la_LDFLAGS = -no-undefined \
 AM_CPPFLAGS = @LIBRARY_EXTRA_CPPFLAGS@
 
 # Library base sources
-MAGICK_BASE_SRCS = memory.c blob.c cache.c locale.c error.c monitor.c constitute.c \
-  image.c composite.c list.c color.c quantize.c segment.c resize.c \
-	transform.c shear.c enhance.c effect.c fx.c decorate.c annotate.c type.c \
-	draw.c render.c montage.c semaphore.c attribute.c signature.c compress.c \
-	command.c gem.c registry.c magic.c magick.c delegate.c module.c static.c \
-	timer.c utility.c cache_view.c stream.c animate.c display.c widget.c \
-	xwindow.c PreRvIcccm.c
+MAGICK_BASE_SRCS = memory.c blob.c cache.c locale.c error.c monitor.c \
+  constitute.c image.c composite.c list.c color.c quantize.c segment.c \
+	resize.c transform.c shear.c enhance.c effect.c fx.c decorate.c annotate.c \
+	type.c draw.c render.c montage.c semaphore.c attribute.c signature.c \
+	compress.c command.c gem.c registry.c magic.c magick.c delegate.c module.c \
+	static.c timer.c utility.c cache_view.c stream.c animate.c display.c \
+	widget.c xwindow.c PreRvIcccm.c
 
 
 # Platform specific source files that may appear in the library
@@ -287,9 +287,9 @@ bin_SCRIPTS = Magick-config
 # Headers which are installed
 include_HEADERS = PreRvIcccm.h api.h attribute.h blob.h cache.h \
   cache_view.h classify.h command.h compress.h magick_config.h delegate.h \
-  draw.h render.h error.h gem.h image.h list.h magic.h magick.h module.h \
-  monitor.h quantize.h registry.h semaphore.h timer.h utility.h version.h \
-	widget.h xwindow.h
+  draw.h render.h error.h gem.h image.h list.h magic.h magick.h \
+	module.h monitor.h quantize.h registry.h semaphore.h timer.h utility.h \
+	version.h widget.h xwindow.h
 
 
 # Headers which are not installed but which are distributed
@@ -356,21 +356,22 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/constitute.Plo ./$(DEPDIR)/decorate.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/delegate.Plo ./$(DEPDIR)/display.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/draw.Plo ./$(DEPDIR)/effect.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/enhance.Plo ./$(DEPDIR)/locale.Plo ./$(DEPDIR)/error.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/enhance.Plo ./$(DEPDIR)/error.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/fx.Plo ./$(DEPDIR)/gem.Plo \
 @AMDEP_TRUE@	./$(DEPDIR)/image.Plo ./$(DEPDIR)/list.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/magic.Plo ./$(DEPDIR)/magick.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/memory.Plo ./$(DEPDIR)/module.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/monitor.Plo ./$(DEPDIR)/montage.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/ntbase.Plo ./$(DEPDIR)/ntfeature.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/quantize.Plo ./$(DEPDIR)/registry.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/render.Plo ./$(DEPDIR)/resize.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/segment.Plo ./$(DEPDIR)/semaphore.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/shear.Plo ./$(DEPDIR)/signature.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/static.Plo ./$(DEPDIR)/stream.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/timer.Plo ./$(DEPDIR)/transform.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/type.Plo ./$(DEPDIR)/utility.Plo \
-@AMDEP_TRUE@	./$(DEPDIR)/widget.Plo ./$(DEPDIR)/xwindow.Plo
+@AMDEP_TRUE@	./$(DEPDIR)/locale.Plo ./$(DEPDIR)/magic.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/magick.Plo ./$(DEPDIR)/memory.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/module.Plo ./$(DEPDIR)/monitor.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/montage.Plo ./$(DEPDIR)/ntbase.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/ntfeature.Plo ./$(DEPDIR)/quantize.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/registry.Plo ./$(DEPDIR)/render.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/resize.Plo ./$(DEPDIR)/segment.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/semaphore.Plo ./$(DEPDIR)/shear.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/signature.Plo ./$(DEPDIR)/static.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/stream.Plo ./$(DEPDIR)/timer.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/transform.Plo ./$(DEPDIR)/type.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/utility.Plo ./$(DEPDIR)/widget.Plo \
+@AMDEP_TRUE@	./$(DEPDIR)/xwindow.Plo
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
 	$(CPPFLAGS) $(AM_CFLAGS) $(CFLAGS)
 LTCOMPILE = $(LIBTOOL) --mode=compile $(CC) $(DEFS) $(DEFAULT_INCLUDES) \
@@ -497,12 +498,12 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/draw.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/effect.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/enhance.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/locale.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/error.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/fx.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gem.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/image.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/list.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/locale.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/magic.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/magick.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/memory.Plo@am__quote@
