--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -784,9 +784,9 @@ check-rwfile-sized:
 	exit $$status
 
 check-drawtest:
-	./drawtest drawtest_out.miff
-	./drawtest drawtest_out.mvg
-	./drawtest drawtest_out.svg
+	-./drawtest drawtest_out.miff
+	-./drawtest drawtest_out.mvg
+	-./drawtest drawtest_out.svg
 
 check: check-drawtest check-rwfile check-rwfile-sized check-rwblob check-rwblob-sized
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
