*** empty log message ***

--- a/coders/Makefile.am
+++ b/coders/Makefile.am
@@ -65,7 +65,7 @@ endif # WITH_MODULES
 EXTRA_DIST = modules.mgk delegates.mgk.in type.mgk.in
 
 # Headers which are not installed but which are distributed
-noinst_HEADERS = pdf.h
+noinst_HEADERS = 
 
 # Location of libMagick.la
 LIBMAGICK = ../magick/libMagick.la
