--- a/coders/Makefile.in
+++ b/coders/Makefile.in
@@ -268,7 +268,7 @@ MAGICK_CODER_SRCS = \
 EXTRA_DIST = modules.mgk delegates.mgk.in type.mgk.in
 
 # Headers which are not installed but which are distributed
-noinst_HEADERS = pdf.h
+noinst_HEADERS = 
 
 # Location of libMagick.la
 LIBMAGICK = ../magick/libMagick.la
